fixed home spacing

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -70,7 +70,7 @@ MediaWiki overriding styles
 }
 
 .page-Home {
-    #firstHeading, #siteSub, #contentSub {
+    #firstHeading, #siteSub, #contentSub, #contentSub2 {
         display: none;
     }
 }
